@@ -50,6 +50,8 @@ Version 2.0-dev (CVS)
 - Fixed multi-line text rendering (bug 1916) 
 
 - Fixed multi-line text height problem (bug 1919)
+
+- Fixed the text font size problem  (bug 1918)
  
 Version 1.7.0-beta1 (2007-02-29)
 --------------------------------
@@ -912,5 +914,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.213 2008-07-14 16:09:10 aboudreault Exp $
+$Id: HISTORY.TXT,v 1.214 2008-07-14 17:51:21 aboudreault Exp $
 ------------
